--- a/DemoProject/DemoProject/Base.lproj/Main.storyboard
+++ b/DemoProject/DemoProject/Base.lproj/Main.storyboard
@@ -6,14 +6,10 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="NunitoSans-Bold.ttf">
-            <string>NunitoSans-Bold</string>
-        </array>
         <array key="NunitoSans-SemiBold.ttf">
             <string>NunitoSans-SemiBold</string>
         </array>
@@ -101,16 +97,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7ce-VO-cei">
-                                <rect key="frame" x="0.0" y="44" width="414" height="110"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="80"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ViewPager" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="34i-5t-Uxt">
-                                        <rect key="frame" x="16" y="16" width="105" height="26"/>
-                                        <fontDescription key="fontDescription" name="NunitoSans-Bold" family="Nunito Sans" pointSize="22"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pUi-ON-n2j">
-                                        <rect key="frame" x="0.0" y="42" width="414" height="56"/>
+                                        <rect key="frame" x="0.0" y="12" width="414" height="56"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="V6c-lt-bUP">
                                             <size key="itemSize" width="146" height="51"/>
@@ -119,7 +109,7 @@
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TabCell" id="yFs-qt-QBQ" customClass="TabCell" customModule="GANA" customModuleProvider="target">
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TabCell" id="yFs-qt-QBQ" customClass="TabCell" customModule="DemoProject" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="2.5" width="146" height="51"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -161,19 +151,17 @@
                                         </connections>
                                     </collectionView>
                                 </subviews>
-                                <color key="backgroundColor" name="appgreen"/>
+                                <color key="backgroundColor" red="0.0" green="0.71764705880000002" blue="0.85882352939999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="34i-5t-Uxt" firstAttribute="leading" secondItem="7ce-VO-cei" secondAttribute="leading" constant="16" id="GLn-cl-2g0"/>
-                                    <constraint firstItem="34i-5t-Uxt" firstAttribute="top" secondItem="7ce-VO-cei" secondAttribute="top" constant="16" id="PFa-BH-BsX"/>
+                                    <constraint firstItem="pUi-ON-n2j" firstAttribute="top" secondItem="7ce-VO-cei" secondAttribute="top" constant="12" id="0AV-V3-KMD"/>
                                     <constraint firstAttribute="bottom" secondItem="pUi-ON-n2j" secondAttribute="bottom" constant="12" id="UKs-iu-Xnz"/>
-                                    <constraint firstItem="pUi-ON-n2j" firstAttribute="top" secondItem="34i-5t-Uxt" secondAttribute="bottom" id="ZV7-Ei-nVM"/>
                                     <constraint firstAttribute="trailing" secondItem="pUi-ON-n2j" secondAttribute="trailing" id="iLw-JR-Gpo"/>
-                                    <constraint firstAttribute="width" secondItem="7ce-VO-cei" secondAttribute="height" multiplier="207:55" id="jdt-E4-LFg"/>
+                                    <constraint firstAttribute="width" secondItem="7ce-VO-cei" secondAttribute="height" multiplier="207:40" id="jdt-E4-LFg"/>
                                     <constraint firstItem="pUi-ON-n2j" firstAttribute="leading" secondItem="7ce-VO-cei" secondAttribute="leading" id="zRL-Dw-pXK"/>
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4ep-da-6rT">
-                                <rect key="frame" x="0.0" y="154" width="414" height="742"/>
+                                <rect key="frame" x="0.0" y="124" width="414" height="772"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="52g-aL-xd7">
                                     <size key="itemSize" width="414" height="628"/>
@@ -182,8 +170,8 @@
                                     <inset key="sectionInset" minX="0.0" minY="24" maxX="0.0" maxY="24"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TabDetailCell" id="M1s-qQ-Wlh" customClass="TabDetailCell" customModule="GANA" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="57" width="414" height="628"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TabDetailCell" id="M1s-qQ-Wlh" customClass="TabDetailCell" customModule="DemoProject" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="72" width="414" height="628"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="628"/>
@@ -193,7 +181,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="628"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <prototypes>
-                                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TableCell" rowHeight="275" id="YEs-IE-KtX" customClass="TableCell" customModule="GANA" customModuleProvider="target">
+                                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TableCell" rowHeight="275" id="YEs-IE-KtX" customClass="TableCell" customModule="DemoProject" customModuleProvider="target">
                                                             <rect key="frame" x="0.0" y="28" width="414" height="275"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YEs-IE-KtX" id="RtQ-Rs-07g">
@@ -365,8 +353,5 @@
         <image name="AD.png" width="256" height="179"/>
         <image name="bell" width="15" height="17"/>
         <image name="user" width="25" height="20.5"/>
-        <namedColor name="appgreen">
-            <color name="ibMissingResourceColor" catalog="#$assets-com.apple.dt.DVTKit" colorSpace="catalog"/>
-        </namedColor>
     </resources>
 </document>
