--- a/DemoProject/DemoProject/Base.lproj/Main.storyboard
+++ b/DemoProject/DemoProject/Base.lproj/Main.storyboard
@@ -63,15 +63,30 @@
                                     <constraint firstAttribute="height" constant="50" id="R49-9U-g2Y"/>
                                 </constraints>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD.png" translatesAutoresizingMaskIntoConstraints="NO" id="xnr-31-uDb">
+                                <rect key="frame" x="87" y="279" width="240" height="130"/>
+                                <color key="backgroundColor" red="0.40000000000000002" green="0.39607843139999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="Qbm-No-Acv"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="detail"/>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabled" value="NO"/>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabledForSubviews" value="NO"/>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.090196078430000007" green="0.39607843139999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="iqI-zc-W6U" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="115" id="87d-Nv-keo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xnr-31-uDb" secondAttribute="trailing" constant="87" id="BuA-Bd-ocD"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ww3-zT-Z66" secondAttribute="bottom" constant="175" id="Csq-6U-bTe"/>
                             <constraint firstItem="iqI-zc-W6U" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="Dwu-bM-qdO"/>
                             <constraint firstItem="OUf-aq-CG5" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="JYo-ss-rwC"/>
                             <constraint firstItem="ww3-zT-Z66" firstAttribute="top" secondItem="OUf-aq-CG5" secondAttribute="bottom" constant="91" id="Mvw-qo-DUa"/>
                             <constraint firstItem="OUf-aq-CG5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NlZ-ki-kbd"/>
+                            <constraint firstItem="OUf-aq-CG5" firstAttribute="top" secondItem="xnr-31-uDb" secondAttribute="bottom" constant="19" id="Z3S-gj-AOG"/>
+                            <constraint firstItem="xnr-31-uDb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="Zu8-eC-rSt"/>
                             <constraint firstItem="OUf-aq-CG5" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="bWI-F6-sK8"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iqI-zc-W6U" secondAttribute="trailing" constant="87" id="dBY-vB-IjS"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ww3-zT-Z66" secondAttribute="trailing" constant="87" id="rqv-hD-KDr"/>
@@ -82,6 +97,7 @@
                     <navigationItem key="navigationItem" id="pWa-Tt-Q3f"/>
                     <connections>
                         <outlet property="customView" destination="iqI-zc-W6U" id="iW4-BY-Po2"/>
+                        <outlet property="iv" destination="xnr-31-uDb" id="kTs-X9-mFa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -91,7 +107,7 @@
         <!--View PagerVC-->
         <scene sceneID="BJ7-mt-Nyc">
             <objects>
-                <viewController storyboardIdentifier="ViewPagerVC" id="7x7-a0-ZhP" customClass="ViewPagerVC" customModule="DemoProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewPagerVC" automaticallyAdjustsScrollViewInsets="NO" id="7x7-a0-ZhP" customClass="ViewPagerVC" customModule="DemoProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Que-fL-Ve7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -167,17 +183,17 @@
                                     <size key="itemSize" width="414" height="628"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="24" maxX="0.0" maxY="24"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="24"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TabDetailCell" id="M1s-qQ-Wlh" customClass="TabDetailCell" customModule="DemoProject" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="72" width="414" height="628"/>
+                                        <rect key="frame" x="0.0" y="60" width="414" height="628"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="628"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nXn-PK-4C6">
+                                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nXn-PK-4C6">
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="628"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <prototypes>
@@ -189,10 +205,10 @@
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JVo-Qd-hee">
-                                                                        <rect key="frame" x="24" y="48" width="366" height="223"/>
+                                                                        <rect key="frame" x="20" y="10" width="374" height="255"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XcV-lt-8tu">
-                                                                                <rect key="frame" x="275" y="177" width="75" height="30"/>
+                                                                                <rect key="frame" x="283" y="209" width="75" height="30"/>
                                                                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="height" constant="30" id="YM1-Jc-WPf"/>
@@ -212,7 +228,7 @@
                                                                                 </userDefinedRuntimeAttributes>
                                                                             </label>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Grilling Tips For The Dog Days Of Summer" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Yj-wh-Iqh">
-                                                                                <rect key="frame" x="16" y="124" width="270" height="45"/>
+                                                                                <rect key="frame" x="16" y="156" width="278" height="45"/>
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="height" constant="45" id="bG3-dQ-xIM"/>
                                                                                 </constraints>
@@ -221,10 +237,10 @@
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
                                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD.png" translatesAutoresizingMaskIntoConstraints="NO" id="Zzd-GW-Scg">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="366" height="116"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="374" height="148"/>
                                                                             </imageView>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QM7-NE-XjW">
-                                                                                <rect key="frame" x="16" y="188" width="153.5" height="19"/>
+                                                                                <rect key="frame" x="16" y="220" width="157" height="19"/>
                                                                                 <subviews>
                                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="90/100 Puntos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="cOe-Bn-AcO">
                                                                                         <rect key="frame" x="0.0" y="8" width="83" height="11"/>
@@ -274,10 +290,10 @@
                                                                     </view>
                                                                 </subviews>
                                                                 <constraints>
-                                                                    <constraint firstItem="JVo-Qd-hee" firstAttribute="leading" secondItem="RtQ-Rs-07g" secondAttribute="leading" constant="24" id="F5x-Yy-Kcd"/>
-                                                                    <constraint firstAttribute="trailing" secondItem="JVo-Qd-hee" secondAttribute="trailing" constant="24" id="RSm-zp-Pkz"/>
-                                                                    <constraint firstAttribute="bottom" secondItem="JVo-Qd-hee" secondAttribute="bottom" constant="4" id="how-IG-nMg"/>
-                                                                    <constraint firstItem="JVo-Qd-hee" firstAttribute="top" secondItem="RtQ-Rs-07g" secondAttribute="top" constant="48" id="yPh-Ix-RpC"/>
+                                                                    <constraint firstItem="JVo-Qd-hee" firstAttribute="leading" secondItem="RtQ-Rs-07g" secondAttribute="leading" constant="20" id="F5x-Yy-Kcd"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="JVo-Qd-hee" secondAttribute="trailing" constant="20" id="RSm-zp-Pkz"/>
+                                                                    <constraint firstAttribute="bottom" secondItem="JVo-Qd-hee" secondAttribute="bottom" constant="10" id="how-IG-nMg"/>
+                                                                    <constraint firstItem="JVo-Qd-hee" firstAttribute="top" secondItem="RtQ-Rs-07g" secondAttribute="top" constant="10" id="yPh-Ix-RpC"/>
                                                                 </constraints>
                                                             </tableViewCellContentView>
                                                             <connections>
@@ -328,7 +344,45 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ule-oR-qai" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2275" y="2535"/>
+            <point key="canvasLocation" x="1778" y="61"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="ksI-QE-XCO">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" id="ixc-tC-dT3" customClass="DetailViewController" customModule="DemoProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Kq6-b3-0He">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD.png" translatesAutoresizingMaskIntoConstraints="NO" id="5Fg-c0-g2A">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="384"/>
+                                <color key="backgroundColor" red="0.40000000000000002" green="0.39607843139999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="5Fg-c0-g2A" secondAttribute="height" multiplier="69:64" id="oDF-cS-V16"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="detail"/>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabled" value="NO"/>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabledForSubviews" value="NO"/>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" red="0.29803921570000003" green="0.29803921570000003" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="5Fg-c0-g2A" firstAttribute="leading" secondItem="TZd-0M-fKN" secondAttribute="leading" id="7Fg-e1-KTq"/>
+                            <constraint firstItem="5Fg-c0-g2A" firstAttribute="trailing" secondItem="TZd-0M-fKN" secondAttribute="trailing" id="o3W-z6-drN"/>
+                            <constraint firstItem="5Fg-c0-g2A" firstAttribute="top" secondItem="Kq6-b3-0He" secondAttribute="top" id="rkh-rB-QtK"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="TZd-0M-fKN"/>
+                    </view>
+                    <connections>
+                        <outlet property="iv" destination="5Fg-c0-g2A" id="KDV-m8-g79"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LsA-tA-bir" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2461" y="61"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Bj4-gj-m4U">
